Change globalization to relative paths

--- a/src/plugins/theme_r2/index.ejs
+++ b/src/plugins/theme_r2/index.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="<%= styles[i] %>"><% } %>
 
     <!-- hard coding while developing -->
+  <script type='text/javascript' src="system-plugin/globalization/js/initGlobalization.js"></script>        
     <link rel="stylesheet" href="plugin/theme_r2/css/theme_r2.css">
     <script type="text/javascript" src="components/webcomponentsjs/webcomponents-lite.js"></script>
     <script>
