Move to latest mjpeg-video

--- a/src/plugins/theme_r2/index.ejs
+++ b/src/plugins/theme_r2/index.ejs
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="<%= styles[i] %>"><% } %>
 
     <!-- hard coding while developing -->
-  <script type='text/javascript' src="system-plugin/globalization/js/initGlobalization.js"></script>        
+  <script type='text/javascript' src="system-plugin/globalization/js/initGlobalization.js"></script>
     <link rel="stylesheet" href="plugin/theme_r2/css/theme_r2.css">
     <script type="text/javascript" src="components/webcomponentsjs/webcomponents-lite.js"></script>
     <script>
@@ -56,7 +56,7 @@
       <div id="header">
         <div class="navbar-inner">
           <a class="brand" href="#">
-            <img src="../../themes/OpenROV/img/openrov.png" class="logo"/>
+            <img src="themes/OpenROV/img/openrov.png" class="logo"/>
             <span class="navbar-title">Cockpit</span>
           </a>
         </div>
