fix horizon position in classic-ui

--- a/src/plugins/classic-ui/index.ejs
+++ b/src/plugins/classic-ui/index.ejs
@@ -453,8 +453,10 @@
         <!--        <rov-video>
                 </rov-video>
         -->
-                <orov-video id="camera1" border='1' style='width: 100%; height:100%'event-emitter="{{cockpit-event-emitter}}"></orov-video>
-                <orov-rov-horizon id="horizon"  event-emitter="{{cockpit-event-emitter}}"></orov-rov-horizon>
+                <orov-video id="camera1" border='1' style='position:relative; width: 100%; height:100%' event-emitter="{{cockpit-event-emitter}}">
+                  <orov-rov-horizon id="horizon" style='position:absolute; top:0px; left:0px; z-index:33; width:100%; height:100%' event-emitter="{{cockpit-event-emitter}}"></orov-rov-horizon>
+                </orov-video>
+
 
               </div>
             </div>
