Fix horizon tag nam in classic-ui

--- a/src/plugins/classic-ui/index.ejs
+++ b/src/plugins/classic-ui/index.ejs
@@ -454,7 +454,7 @@
                 </rov-video>
         -->
                 <orov-video id="camera1" border='1' style='position:relative; width: 100%; height:100%' event-emitter="{{cockpit-event-emitter}}">
-                  <orov-rov-horizon id="horizon" style='position:absolute; top:0px; left:0px; z-index:33; width:100%; height:100%' event-emitter="{{cockpit-event-emitter}}"></orov-rov-horizon>
+                  <orov-horizon id="horizon" style='position:absolute; top:0px; left:0px; z-index:33; width:100%; height:100%' event-emitter="{{cockpit-event-emitter}}"></orov-horizon>
                 </orov-video>
 
 
