Default telemetry-item format to 2 places

--- a/src/plugins/classic-ui/index.ejs
+++ b/src/plugins/classic-ui/index.ejs
@@ -490,7 +490,7 @@
               </div>
               <div class="pull-right text-center">
                 <label>{{__('CPU %')}}</label>
-                <orov-telemetry-item  showAsGraph=false telemetry-item="cpu" event-emitter="{{cockpit-event-emitter}}"></orov-telemetry-item>
+                <orov-telemetry-item  showAsGraph=false telemetry-item="cpuUsage" event-emitter="{{cockpit-event-emitter}}"></orov-telemetry-item>
               </div>
               <div class="pull-right text-center">
                 <label>{{__('Battery')}}</label>
