Added missing wc references to classic-ui

--- a/src/plugins/classic-ui/index.ejs
+++ b/src/plugins/classic-ui/index.ejs
@@ -45,6 +45,8 @@
     <link rel="import" href="components/rovpilot-wire/orov-headingHold.html">
     <link rel="import" href="components/blackbox/orov-blackbox-status.html">
     <link rel="import" href="components/input-controller/orov-inputs-list.html">
+    <link rel="import" href="components/settings-manager/orov-settings-manager.html">
+    <link rel="import" href="components/thrusters2x1/orov-thrusters2x1-motortest.html">
 
 
   </head>
