new-ui fix for relative bathing

--- a/src/plugins/new-ui/index.ejs
+++ b/src/plugins/new-ui/index.ejs
@@ -78,7 +78,7 @@
         <div id="newuiBody" class="full-height">
           <div id="newuiContainer">
             <div class="navbar navbar-inverse navbar-fixed-top navbar-collapse">
-              <div id="newuiTopbar" class="container"><div class="navbar-header"><a class="navbar-brand" href="#"><img src="../../themes/OpenROV/img/openrov.png" class="logo"><span class="navbar-titel">{{__('Cockpit')}}</span></a></div>
+              <div id="newuiTopbar" class="container"><div class="navbar-header"><a class="navbar-brand" href="#"><img src="themes/OpenROV/img/openrov.png" class="logo"><span class="navbar-titel">{{__('Cockpit')}}</span></a></div>
 
                 <div id="menu">
                   <rov-menu id="menuitems" class="nav pull-right navbar-nav">
