--- a/src/plugins/new-ui/popup.ejs
+++ b/src/plugins/new-ui/popup.ejs
@@ -27,7 +27,7 @@
 
 <body>
 <template id='tt' is="dom-bind">
-<<%= uiElement %> id="<%= uiId %>" event-emitter={{cockpit-event-emitter}}></<%= uiElement %>>
+<<%= uiElement %> id="<%= uiId %>" event-emitter={{cockpitEventEmitter}}></<%= uiElement %>>
 </template>
   <script>
   window.cockpit = window.opener.cockpit;
