--- a/src/plugins/classic-ui/index.ejs
+++ b/src/plugins/classic-ui/index.ejs
@@ -429,15 +429,15 @@
             <a class="brand" href="#"><img src="themes/OpenROV/img/openrov.png" class="logo"/><span class="navbar-titel">Cockpit</span></a>
             <ul class="nav pull-left" id="navtoolbar">
               <li><a href="#"><img id="keyboardpopover" src="themes/OpenROV/img/keyboard.png" onclick="document.querySelector('#keyboard-listing').open();"/></a></li>
-              <li><a href="#" id="servoTilt" ><orov-servo-tilt class="pull-left" event-emitter="{{cockpit-event-emitter}}"></orov-servo-tilt></a></li>
-              <li><a href="#"><orov-external-brightness-indicator  class="pull-left"  event-emitter="{{cockpit-event-emitter}}"></orov-external-brightness-indicator></a></li>
+              <li><a href="#" id="servoTilt" ><orov-servo-tilt class="pull-left" event-emitter="{{cockpitEventEmitter}}"></orov-servo-tilt></a></li>
+              <li><a href="#"><orov-external-brightness-indicator  class="pull-left"  event-emitter="{{cockpitEventEmitter}}"></orov-external-brightness-indicator></a></li>
               <li><a href="#"><rov-gamepad class="pull-left"></rov-gamepad></a></li>
             </ul>
             <ul class="nav center" id="switches">
-              <li><a href="#"><orov-lasers class="pull-left"  event-emitter="{{cockpit-event-emitter}}"></orov-lasers></a></li>
-              <li><a href="#"><orov-depthHold class="pull-left"  event-emitter="{{cockpit-event-emitter}}"></rov-depthHold></a></li>
-              <li><a href="#"><orov-headingHold class="pull-left"  event-emitter="{{cockpit-event-emitter}}"></rov-headingHold></a></li>
-              <li><a href="#"><orov-blackbox-status class="pull-left" event-emitter="{{cockpit-event-emitter}}"></orov-blackbox-status></a></li>
+              <li><a href="#"><orov-lasers class="pull-left"  event-emitter="{{cockpitEventEmitter}}"></orov-lasers></a></li>
+              <li><a href="#"><orov-depthHold class="pull-left"  event-emitter="{{cockpitEventEmitter}}"></rov-depthHold></a></li>
+              <li><a href="#"><orov-headingHold class="pull-left"  event-emitter="{{cockpitEventEmitter}}"></rov-headingHold></a></li>
+              <li><a href="#"><orov-blackbox-status class="pull-left" event-emitter="{{cockpitEventEmitter}}"></orov-blackbox-status></a></li>
             </ul>
             <rov-menu id="menuitems" class="nav pull-right">
               <li><a href="#" id="show-settings" onclick="document.querySelector('#plugin-settings').open();">{{__('Settings')}}</a></li>
@@ -455,16 +455,16 @@
         <!--        <rov-video>
                 </rov-video>
         -->
-                <orov-video id="camera1" border='1' style='position:relative; width: 100%; height:100%' event-emitter="{{cockpit-event-emitter}}">
-                  <orov-horizon id="horizon" style='position:absolute; top:0px; left:0px; z-index:33; width:100%; height:100%' event-emitter="{{cockpit-event-emitter}}"></orov-horizon>
+                <orov-video id="camera1" border='1' style='position:relative; width: 100%; height:100%' event-emitter="{{cockpitEventEmitter}}">
+                  <orov-horizon id="horizon" style='position:absolute; top:0px; left:0px; z-index:33; width:100%; height:100%' event-emitter="{{cockpitEventEmitter}}"></orov-horizon>
                 </orov-video>
 
 
               </div>
             </div>
             <div id="rov_status_panel" class="span3 pull-right visible-desktop" style="overflow: auto; height: 100%">
-              <orov-serial-monitor class="hidden" style=""  event-emitter="{{cockpit-event-emitter}}"></orov-serial-monitor>
-              <orov-telemetry-monitor id="telemetry" class=""  event-emitter="{{cockpit-event-emitter}}" ></orov-telemetry-monitor>
+              <orov-serial-monitor class="hidden" style=""  event-emitter="{{cockpitEventEmitter}}"></orov-serial-monitor>
+              <orov-telemetry-monitor id="telemetry" class=""  event-emitter="{{cockpitEventEmitter}}" ></orov-telemetry-monitor>
             </div>
           </div>
         </div>
@@ -474,33 +474,33 @@
             <div id="footercontent" class="container-fluid" style="height: 100%">
               <div class="pull-left text-center">
                 <label for='orov-thrustfactor'>{{__('ThrustFactor')}}</label>
-                <orov-thrustfactor event-emitter="{{cockpit-event-emitter}}"></orov-thrustfactor>
+                <orov-thrustfactor event-emitter="{{cockpitEventEmitter}}"></orov-thrustfactor>
               </div>
               <div class="pull-left text-center">
                 <label>{{__('Connection')}}</label>
-                <orov-connection-health event-emitter="{{cockpit-event-emitter}}"></orov-connection-health>
+                <orov-connection-health event-emitter="{{cockpitEventEmitter}}"></orov-connection-health>
               </div>
               <div class="pull-left text-center">
-                <orov-topdowncompass event-emitter="{{cockpit-event-emitter}}"></orov-topdowncompass>
+                <orov-topdowncompass event-emitter="{{cockpitEventEmitter}}"></orov-topdowncompass>
               </div>
               <div class="pull-left text-center">
                 <label>{{__('Latency')}}</label>
-                <orov-ping-graph event-emitter="{{cockpit-event-emitter}}"></orov-ping-graph>
+                <orov-ping-graph event-emitter="{{cockpitEventEmitter}}"></orov-ping-graph>
               </div>
               <div class="pull-right text-center">
-                <orov-time event-emitter="{{cockpit-event-emitter}}"></orov-time>
+                <orov-time event-emitter="{{cockpitEventEmitter}}"></orov-time>
               </div>
               <div class="pull-right text-center">
                 <label>{{__('CPU %')}}</label>
-                <orov-telemetry-item  telemetry-item="cpuUsage" event-emitter="{{cockpit-event-emitter}}"></orov-telemetry-item>
+                <orov-telemetry-item  telemetry-item="cpuUsage" event-emitter="{{cockpitEventEmitter}}"></orov-telemetry-item>
               </div>
               <div class="pull-right text-center">
                 <label>{{__('Battery')}}</label>
-                <orov-battery-status event-emitter="{{cockpit-event-emitter}}"></orov-battery-status>
+                <orov-battery-status event-emitter="{{cockpitEventEmitter}}"></orov-battery-status>
               </div>
               <div class="pull-right text-center">
                 <label>{{__('Board Current')}}</label>
-                <orov-telemetry-item telemetry-item="iout" event-emitter="{{cockpit-event-emitter}}"></orov-telemetry-item>
+                <orov-telemetry-item telemetry-item="iout" event-emitter="{{cockpitEventEmitter}}"></orov-telemetry-item>
               </div>
             </div>
           </div>
@@ -518,13 +518,13 @@
 
         <drop-in-dialog id="plugin-settings" header="Settings">
           <div>
-          <orov-settings-manager event-emitter="{{cockpit-event-emitter}}"></orov-settings-manager>
+          <orov-settings-manager event-emitter="{{cockpitEventEmitter}}"></orov-settings-manager>
         </div>
         </drop-in-dialog>
 
         <drop-in-dialog id="keyboard-listing" header="Key Mappings">
           <div>
-            <orov-inputs-list id="keyboardInstructions" event-emitter="{{cockpit-event-emitter}}"></orov-inputs-list>
+            <orov-inputs-list id="keyboardInstructions" event-emitter="{{cockpitEventEmitter}}"></orov-inputs-list>
           </div>
         </drop-in-dialog>
 
@@ -533,7 +533,7 @@
             <h4>{{__('Pre-Flight Check')}}</h4>
           </div>
           <div>
-            <orov-thrusters2x1-motortest event-emitter="{{cockpit-event-emitter}}"></orov-thrusters2x1-motortest>
+            <orov-thrusters2x1-motortest event-emitter="{{cockpitEventEmitter}}"></orov-thrusters2x1-motortest>
           </div>
           <div class="settings-block">
             <h4>{{__('Callibration')}}</h4>
