tweaks to support geomux plugin
	modified:   package.json
	modified:   src/cockpit.js
	modified:   src/lib/Hardware.js
	modified:   src/lib/OpenROVController.js
	modified:   src/plugins/new-ui/index.ejs
	modified:   src/plugins/video/index.js
	modified:   src/plugins/video/public/bower.json
	modified:   src/plugins/video/public/js/video.js
	modified:   src/plugins/video/public/webcomponents/orov-video.html
	modified:   src/system-plugins/ui-manager/index.js

--- a/src/plugins/new-ui/index.ejs
+++ b/src/plugins/new-ui/index.ejs
@@ -89,7 +89,7 @@
               </div>
             </div>
           </div>
-          <div id="mainContent">
+          <div id="mainContent" class="full-height">
 
             <div id="newuiVideo" class="full-height">
               <orov-video id="camera1" border='1' style='width: 100%; height:100%; position:relative' event-emitter="{{cockpitEventEmitter}}">
