--- a/src/plugins/classic-ui/index.ejs
+++ b/src/plugins/classic-ui/index.ejs
@@ -455,7 +455,7 @@
         <!--        <rov-video>
                 </rov-video>
         -->
-                <orov-video id="camera1" border='1' style='position:relative; width: 100%; height:100%' event-emitter="{{cockpitEventEmitter}}">
+                <orov-video id="camera1" border='1' location='forward' style='position:relative; width: 100%; height:100%' event-emitter="{{cockpitEventEmitter}}">
                   <orov-horizon id="horizon" style='position:absolute; top:0px; left:0px; z-index:33; width:100%; height:100%' event-emitter="{{cockpitEventEmitter}}"></orov-horizon>
                 </orov-video>
 
