Added path info dependency passing to cockpit.js, fixed video attributes, removed unnecessary console log statements

--- a/src/plugins/mobile-ui/index.ejs
+++ b/src/plugins/mobile-ui/index.ejs
@@ -83,7 +83,7 @@
 			<!-- Video Layer -->
 			<div id="layer-vid" class="layer-no-input fill" style="z-index: 10">
 				<!-- Video -->
-				<orov-video class="video" video-source="http://192.168.1.34:8090?action=stream" event-emitter="{{cockpitEventEmitter}}"></orov-video>
+				<orov-video class="video" location="forward" event-emitter="{{cockpitEventEmitter}}"></orov-video>
 			</div>
 			
 			<!-- HUD Layer -->
