--- a/src/plugins/mobile-ui/public/css/style.css
+++ b/src/plugins/mobile-ui/public/css/style.css
@@ -1,11 +1,11 @@
 
 /*Prevent overscroll behaviour, primarily for webapp*/
-html, body 
+html, body
 {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-  
+
     -moz-user-select: none;
     -khtml-user-select: none;
     -webkit-user-select: none;
@@ -64,13 +64,13 @@ html, body
 	pointer-events:none;
 }
 
-.fill 
+.fill
 {
 	width: 100%;
 	height: 100%;
 }
 
-.video 
+.video
 {
     display: flex;
     justify-content: center;
@@ -85,12 +85,12 @@ html, body
     display: -webkit-inline-flex;
     display: inline-flex;
     justify-content: space-between;
-    
+
     width: 100%;
     padding: 10px 10px 0px 10px;
 }
 
-.action-bar 
+.action-bar
 {
 	float: left;
 	position: relative;
@@ -102,6 +102,23 @@ html, body
 	float: left;
 	position: relative;
 	left: -50%;
+	vertical-align: top;
+}
+
+.action-bar-container div
+{
+  vertical-align: top;
+	display: inline-block;
+	background-color: rgba(0,0,0,0.4);
+  color: white;
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
+.action-bar-container .rightend
+{
+	border-radius: 0 0 5px 0;
+  padding-right: 6px;
 }
 
 .action-bar-container .battery
@@ -127,10 +144,9 @@ html, body
 .action-bar-container .depth
 {
 	text-align: right;
-	width: 70px;
+	width: 78px;
 	color: white;
 	background-color: rgba(0,0,0,0.4);
-	border-radius: 0 0 5px 0;
 	vertical-align: top;
 	display: inline-block;
 }
