--- a/src/plugins/theme_r2/index.ejs
+++ b/src/plugins/theme_r2/index.ejs
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <!-- The following viewport code is intended to fullscreen the cockpit and prevent scrolling -->
-    <meta id="Viewport" name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <!--meta id="Viewport" name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"-->
     <script type='text/javascript' src="components/jquery/dist/jquery.min.js"></script>
     <script type='text/javascript' src="components/jquery-ui/jquery-ui.min.js"></script>
 
@@ -28,7 +28,7 @@
 
   <!--
 -->
-  <script type="text/javascript" src="js/no-scroll-fullscreen-viewport.js"></script>
+  <!--script type="text/javascript" src="js/no-scroll-fullscreen-viewport.js"></script-->
   </head>
   <body class='theme_r2'>
   <p>Some text to translate</p>
