Prevent dataview interceptor from running on normal cockpit

--- a/src/plugins/data-viewer/index.ejs
+++ b/src/plugins/data-viewer/index.ejs
@@ -59,7 +59,17 @@
       <orov-blackbox event-emitter="{{cockpitEventEmitter}}"/>
 		</template>
 	</body>
-
+  <script>
+	window.Cockpit = new window.EventEmiiterStoreAndForward(window.Cockpit);
+	window.Cockpit.rov = {on: function(){}, off: function(){}, withHistory: {on: function(){}}};
+	$('#t')[0]['cockpitEventEmitter'] = window.Cockpit;
+	window.Cockpit.plugins.forEach(function(plugin){
+	  var p = new plugin(window.Cockpit);
+	  if (p.listen){
+	    p.listen();
+	  }
+	});
+	</script>
   <script type="text/javascript" src="plugin/data-viewer/js/dataviewer.js"></script>
 
 </html>
