Added svg third party dependencies to mobile ui which fixes compass rotation

--- a/src/plugins/mobile-ui/index.ejs
+++ b/src/plugins/mobile-ui/index.ejs
@@ -32,6 +32,11 @@
 	<script type='text/javascript' src='js/socketIOStoreAndForward.js'></script>
 	<script type='text/javascript' src="js/cockpit.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
+	
+	<script type="text/javascript" src="plugin/new-ui/js/lib/0_jquery.svg.min.js"></script>
+  	<script type="text/javascript" src="plugin/new-ui/js/lib/1_jquery.svgdom.min.js"></script>
+  	<script type="text/javascript" src="plugin/new-ui/js/lib/2_jquery.svganim.min.js"></script>
+
 
 	<script type="text/javascript" src="components/webcomponentsjs/webcomponents-lite.js"></script>
 
