--- a/src/plugins/new-ui/index.ejs
+++ b/src/plugins/new-ui/index.ejs
@@ -61,7 +61,7 @@
 
   <link rel="import" href="components/settings-manager/orov-settings-manager.html">
   <link rel="import" href="components/thrusters2x1/orov-thrusters2x1-motortest.html">
-
+  <link rel="import" href="components/blackbox/orov-blackbox-status.html">
   <% for(var i=0; i<scripts.length; i++) {%>
   <script type="text/javascript" src="<%= scripts[i] %>"></script><% } %>
 
@@ -93,6 +93,8 @@
             <div id="newuiVideo" class="full-height">
               <orov-video id="camera1" border='1' style='width: 100%; height:100%; position:relative' location='forward' event-emitter="{{cockpitEventEmitter}}">
                 <orov-ping-graph style='position:absolute; top:0px; left:0px; z-index:33;' event-emitter="{{cockpitEventEmitter}}"></orov-ping-graph>
+                <orov-blackbox-status style='position:absolute; top:0px; left:100px; z-index:33;' event-emitter="{{cockpitEventEmitter}}"></orov-blackbox-status>
+
                 <orov-horizon id="horizon" style='position:absolute; top:0px; left:0px; z-index:33; width:100%; height:100%' event-emitter="{{cockpitEventEmitter}}"></orov-horizon>
               </orov-video>
             </div>
