Integrated URL routing

--- a/src/plugins/new-ui/cockpit.ejs
+++ b/src/plugins/new-ui/cockpit.ejs
@@ -13,7 +13,7 @@
 
 <link rel="import" href="components/settings-manager/orov-settings-manager.html">
 <link rel="import" href="components/thrusters2x1/orov-thrusters2x1-motortest.html">
-
+<!--script type='text/javascript' src="js/no-scroll-fullscreen-viewport.js"></script-->
 
   <div id="UI" class="full-height">
         <div id="newuiBody" class="full-height">
