--- a/src/system-plugins/ui-manager/base.ejs
+++ b/src/system-plugins/ui-manager/base.ejs
@@ -4,12 +4,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <!-- The following viewport code is intended to fullscreen the cockpit and prevent scrolling -->
-    <meta id="Viewport" name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <!--meta id="Viewport" name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"-->
     <!--<script type='text/javascript' src="bower_components/jquery/dist/jquery.min.js"></script>-->
     <script type='text/javascript' src="components/jquery/dist/jquery.js"></script>
     <!--script type='text/javascript' src="components/jquery-ui/jquery-ui.min.js"></script-->
-
-    <script type='text/javascript' src="js/no-scroll-fullscreen-viewport.js"></script>
     <title><%= title %></title>
 
   </head>
@@ -54,6 +52,12 @@
 <!--TODO: Add logic to support either popout or popin(swapping) of applets-->
 <div id='container'>
 <template id="t" is="dom-bind"  strip-whitespace>
+<link rel="import" href="components/carbon-route/carbon-route.html">
+<link rel="import" href="components/carbon-route/carbon-location.html">
+<carbon-location use-hash-as-path route={{route}}></carbon-location>
+<carbon-route route="{{route}}" pattern="/:page" data={{routedata}} active="{{homeActive}}"></carbon-route>
+
+<span>{{routedata.page}}</span>
   <%
     var header = scriplets.find(function(item){return item.name=='header'});
   %>
@@ -69,7 +73,7 @@
 
   <% for(var i=0; i<scriplets.length; i++) {
     if ((scriplets[i].name == 'header') || (scriplets[i].name == 'footer')){continue;}%>
-  <template is="dom-if" restamp=true if="{{displaySection(scriplet,'<%= scriplets[i].name %>')}}">
+  <template is="dom-if" restamp=true if="{{displaySection(routedata.page,'<%= scriplets[i].name %>')}}">
 
   <%- include(scriplets[i].path,{
     title: title,
