--- a/src/plugins/mobile-ui/vr.ejs
+++ b/src/plugins/mobile-ui/vr.ejs
@@ -1,78 +1,3 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta charset="utf-8">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="mobile-web-app-capable" content="yes">
-		<meta id="Viewport" name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui" />
-		<link rel="manifest" href="manifest.webmanifest">
-
-		<script type='text/javascript' src="components/jquery/dist/jquery.js"></script>
-
-		<title>VR</title>
-
-		<!-- CSS -->
-		<link href="components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="plugin/mobile-ui/css/style.css">
-
-
-	</head>
-
-	<script type='text/javascript' src="js/libs/eventemitter2.js"></script>
-	<script type='text/javascript' src="components/bootstrap/dist/js/bootstrap.js"></script>
-	<script type='text/javascript' src="js/libs/mousetrap.min.js"></script>
-
-	<script type='text/javascript' src='js/libs/gamepad.js'></script>
-	<script type='text/javascript' src='js/utilities.js'></script>
-
-	<script type='text/javascript' src="config.js"></script>
-	<script type='text/javascript' src="socket.io/socket.io.js"></script>
-	<script type='text/javascript' src="system-plugin/globalization/js/initGlobalization.js"></script>
-	<script type='text/javascript' src='js/message-manager.js'></script>
-	<script type='text/javascript' src='js/eventEmitterStoreAndForward.js'></script>
-	<script type='text/javascript' src='js/socketIOStoreAndForward.js'></script>
-	<script type='text/javascript' src="js/cockpit.js"></script>
-	<script type="text/javascript" src="js/app.js"></script>
-
-	<script type="text/javascript" src="components/webcomponentsjs/webcomponents-lite.js"></script>
-
-	<script type="text/javascript" src="plugin/mobile-ui/js/lib/three.min.js"></script>
-
-	<script type='text/javascript' src="plugin/mobile-ui/js/third-party/threejs/three.js"></script>
-	<script type='text/javascript' src="plugin/mobile-ui/js/third-party/threejs/StereoEffect.js"></script>
-	<script type='text/javascript' src="plugin/mobile-ui/js/third-party/threejs/DeviceOrientationControls.js"></script>
-	<script type='text/javascript' src="plugin/mobile-ui/js/third-party/threejs/OrbitControls.js"></script>
-
-	<script>
-		// Use native shadowdom
-		window.Polymer = window.Polymer || {};
-		window.Polymer.dom = 'shadow';
-		window.openrovtheme = 'mobile-ui';
-
-		// Prevent safari overscroll behaviour
-		document.ontouchmove = function(event)
-		{
-			event.preventDefault();
-		}
-
-		// Prevent context menu
-		window.oncontextmenu = function(event) {
-			event.preventDefault();
-			event.stopPropagation();
-			return false;
-		};
-	</script>
-
-	<link rel="import" href="components/polymer/polymer.html">
-
-	<!-- Web components -->
-	
-	<% for( var i = 0; i < scripts.length; i++ )
-	{
-		%>  <script type="text/javascript" src="<%= scripts[i] %>"></script><%
-	}
-	%>
 
 	<style>
 		      body {
@@ -88,23 +13,40 @@
 		      }
 	    </style>
 
-	<body>
-		<template id="t" is="dom-bind" strip-whitespace>
 			<div id="example"></div>
 
 
 
 			<script>
+			var self=this;
 			var camera, scene, renderer;
 			var effect, controls;
 			var element, container;
+			var clock;
 
-			var clock = new THREE.Clock();
+			$.getScript( "plugin/mobile-ui/js/third-party/threejs/three.js",function(){
+				$.when(
 
-			init();
-			animate();
+				    $.getScript( "plugin/mobile-ui/js/third-party/threejs/StereoEffect.js" ),
+				    $.getScript( "plugin/mobile-ui/js/third-party/threejs/DeviceOrientationControls.js" ),
+						$.getScript( "plugin/mobile-ui/js/third-party/threejs/OrbitControls.js" ),
+				    $.Deferred(function( deferred ){
+				        $( deferred.resolve );
+				    })
+				).done(function(){
+					console.log('initing...')
+					init();
+					animate();
+				})
+				.fail(function(xhr,settings,err){
+					console.log("failed loading scripts");
+					console.dir(err);
+				})
+			})
 
 			function init() {
+	 			clock= new THREE.Clock();
+
 			  renderer = new THREE.WebGLRenderer();
 			  element = renderer.domElement;
 			  container = document.getElementById('example');
@@ -215,8 +157,3 @@
 			  }
 			}
 			</script>
-
-		</template>
-	</body>
-
-</html>
