--- a/src/system-plugins/ui-manager/base.ejs
+++ b/src/system-plugins/ui-manager/base.ejs
@@ -61,12 +61,11 @@
 
   <body>
 <!--TODO: Add logic to support either popout or popin(swapping) of applets-->
-<div id='container'>
 <template id="t" is="dom-bind"  strip-whitespace>
 <link rel="import" href="components/carbon-route/carbon-route.html">
 <link rel="import" href="components/carbon-route/carbon-location.html">
 <carbon-location use-hash-as-path route={{route}}></carbon-location>
-<carbon-route route="{{route}}" pattern="/:page" data={{routedata}} active="{{homeActive}}"></carbon-route>
+<carbon-route route="{{route}}" pattern="/:page" data={{routedata}} path="#/cockpit" active="{{homeActive}}"></carbon-route>
   <%
     var header = scriplets.find(function(item){return item.name=='header'});
   %>
@@ -107,6 +106,5 @@
   })%>
   <%}%>
 </template>
-</div>
   </body>
 </html>
