--- a/src/system-plugins/ui-manager/base.ejs
+++ b/src/system-plugins/ui-manager/base.ejs
@@ -64,8 +64,8 @@
 <template id="t" is="dom-bind"  strip-whitespace>
 <link rel="import" href="components/carbon-route/carbon-route.html">
 <link rel="import" href="components/carbon-route/carbon-location.html">
-<carbon-location use-hash-as-path route={{route}}></carbon-location>
-<carbon-route route="{{route}}" pattern="/:page" data={{routedata}} path="#/cockpit" active="{{homeActive}}"></carbon-route>
+<carbon-location use-hash-as-path url-space-regex="^/#/" route={{route}}></carbon-location>
+<carbon-route route="{{route}}" pattern="/:page" data={{routedata}} active="{{homeActive}}"></carbon-route>
   <%
     var header = scriplets.find(function(item){return item.name=='header'});
   %>
