Adjusted menu on new

--- a/src/plugins/new-ui/header.ejs
+++ b/src/plugins/new-ui/header.ejs
@@ -24,7 +24,7 @@ body {
 
     <div id="menu">
       <div id="menuitems" class="nav pull-right navbar-nav">
-        <li><orov-appletswitcher event-emitter="{{cockpitEventEmitter}}" selection="{{routedata.page}}"></orov-appletswitcher></li>
+        <li><orov-appletswitcher event-emitter="{{cockpitEventEmitter}}" selection="{{routedata.page}}" horizontal-offset='-200'></orov-appletswitcher></li>
       </div>
     </div>
   </div>
