--- a/src/plugins/thrusters2x1/diagnostics.ejs
+++ b/src/plugins/thrusters2x1/diagnostics.ejs
@@ -1,3 +1,4 @@
+<link rel="import" href="components/thrusters2x1/orov-thrusters2x1-motortest.html">
 <div class="settings-block">
   <h4>{{__('Pre-Flight Check')}}</h4>
 </div>
