--- a/src/plugins/basictheme/header.ejs
+++ b/src/plugins/basictheme/header.ejs
@@ -1,1 +1,5 @@
+<link rel="stylesheet" href="plugin/basictheme/css/basictheme.css">
+<link rel="import" href="components/ui-manager/orov-appletswitcher.html">
+
+<orov-appletswitcher event-emitter="{{cockpitEventEmitter}}" selection="{{routedata.page}}"></orov-appletswitcher>
 <h4>THIS IS A BASIC THEME</h4>
