--- a/src/plugins/new-ui/public/css/style.css
+++ b/src/plugins/new-ui/public/css/style.css
@@ -6,6 +6,11 @@
     color: white;
 }
 
+
+#newuiTopbar {
+  width:100%;
+}
+
 .navbar-fixed-top .navbar-inner {
     height: 30px;
 }
@@ -46,6 +51,7 @@ a .navbar-titel {
 .newui-item {
     border: 1px solid white;
     margin: 15px;
+    text-align: center;
 }
 
 #newui-depth {
@@ -53,15 +59,13 @@ a .navbar-titel {
 }
 
 .newui-item h4 {
-    text-align: center;
-    font-size: 1.2vw;
+    font-size: 1.1vw;
     color: white;
     top: -2.9vh;
 
     background-color: black;
     padding: 5px 10px;
     display: inline-block;
-    left: 1vw;
     /*width: 33%;*/
     margin-right: auto;
     margin-left: auto;
@@ -82,7 +86,20 @@ a .navbar-titel {
     margin-bottom: -45px;
 }
 
+#newui-power {
+    margin-top: 8px;
+}
+
+orov-newui-switches {
+  margin-top: 10px;
+  display: flex;
+}
+
 #newui-time {
     top: -35px;
     margin-bottom: -30px;
+}
+
+iron-a11y-announcer {
+  display: none
 }
