--- a/src/plugins/new-ui/header.ejs
+++ b/src/plugins/new-ui/header.ejs
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="plugin/new-ui/css/style.css">
 
 <link rel="import" href="components/ui-manager/orov-appletswitcher.html">
+<link rel="import" href="components/cloud-profile/orov-login.html">
 
 <!--This example shows how to selectivly apply settings per applet that override the overall style sheet-->
 <template is="dom-if" restamp=true if="{{!displaySection(routedata.page,'cockpit')}}">
@@ -24,6 +25,7 @@ body {
 
     <div id="menu">
       <div id="menuitems" class="nav pull-right navbar-nav">
+        <li><orov-login event-emitter="{{cockpitEventEmitter}}" /></li>
         <li><orov-appletswitcher event-emitter="{{cockpitEventEmitter}}" selection="{{routedata.page}}" horizontal-offset='-200'></orov-appletswitcher></li>
       </div>
     </div>
