Added ability to pass theme in theme request parameter

--- a/src/system-plugins/ui-manager/base.ejs
+++ b/src/system-plugins/ui-manager/base.ejs
@@ -53,7 +53,7 @@
       lazyRegister: true
     };
   </script>
-  <script>window.openrovtheme='new-ui'</script>
+  <script>window.openrovtheme='<%=theme%>'</script>
   <link rel="import" href="components/polymer/polymer.html">
   <!-- Load the browser global services -->
   <% for(var i=0; i<scripts.length; i++) {%>
