Upgraded to newer app-route component

--- a/src/system-plugins/ui-manager/base.ejs
+++ b/src/system-plugins/ui-manager/base.ejs
@@ -69,10 +69,10 @@
 </platinum-sw-register>
 
 <!-- Temporarily disabled pending solution for relative pathing -->
-<!--link rel="import" href="components/carbon-route/carbon-route.html">
-<link rel="import" href="components/carbon-route/carbon-location.html">
-<carbon-location use-hash-as-path url-space-regex="^/#/" route={{route}}></carbon-location>
-<carbon-route route="{{route}}" pattern="/:page" data={{routedata}} active="{{homeActive}}"></carbon-route-->
+<!--link rel="import" href="components/app-route/app-route.html">
+<link rel="import" href="components/app-route/app-location.html">
+<app-location use-hash-as-path url-space-regex="^/#/" route={{route}}></app-location>
+<app-route route="{{route}}" pattern="/:page" data={{routedata}} active="{{homeActive}}"></app-route-->
 
 
   <%
