--- a/src/system-plugins/ui-manager/base.ejs
+++ b/src/system-plugins/ui-manager/base.ejs
@@ -36,7 +36,7 @@
   <script type='text/javascript' src='js/message-manager.js'></script>
   <script type='text/javascript' src='js/eventEmitterStoreAndForward.js'></script>
   <script type='text/javascript' src='js/socketIOStoreAndForward.js'></script>
-  <script type='text/javascript' src='js/SocketIOtoEmitterBridge.js'></script>  
+  <script type='text/javascript' src='js/socketIOtoEmitterBridge.js'></script>  
   <script type='text/javascript' src="js/cockpit.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="plugin/new-ui/js/lib/0_jquery.svg.min.js"></script>
@@ -69,11 +69,12 @@
 </platinum-sw-register>
 
 <!-- Temporarily disabled pending solution for relative pathing -->
-<!--link rel="import" href="components/app-route/app-route.html">
+<!--
+<link rel="import" href="components/app-route/app-route.html">
 <link rel="import" href="components/app-route/app-location.html">
 <app-location use-hash-as-path url-space-regex="^/#/" route={{route}}></app-location>
-<app-route route="{{route}}" pattern="/:page" data={{routedata}} active="{{homeActive}}"></app-route-->
-
+<app-route route="{{route}}" pattern="/:page" data={{routedata}} active="{{homeActive}}"></app-route>
+-->
 
   <%
     var header = scriplets.find(function(item){return item.name=='header'});
