--- a/src/system-plugins/settings-manager/settings.ejs
+++ b/src/system-plugins/settings-manager/settings.ejs
@@ -1,2 +1,2 @@
   <link rel="import" href="components/settings-manager/orov-settings-manager.html">
-  <orov-settings-manager event-emitter="{{cockpitEventEmitter}}"/>
+  <orov-settings-manager class="no-mousetrap" event-emitter="{{cockpitEventEmitter}}"/>
