Set default map position over the ss tahoe, added marker for the ss tahoe and boat, added listener to update boat marker position when gps coords come in

--- a/src/plugins/gps/map.ejs
+++ b/src/plugins/gps/map.ejs
@@ -3,7 +3,7 @@
 <link rel="import" href="components/gps/orov-map.html">
 
 <div>
-  <orov-map id="map" latitude="48.853" longitude="2.35" event-emitter="{{cockpitEventEmitter}}"></orov-map>
+  <orov-map id="map" latitude="39.0916667" longitude="-119.9542667" event-emitter="{{cockpitEventEmitter}}"></orov-map>
 </div>
 
 <!--
